<resources>
    <string name="app_name">LoginRegisterUI</string>
    <string name="WelcomeLabelDesc">sign in to access your account</string>
    <string name="welcomeLabel">Welcome back</string>
    <string name="forget_password">Forget Password ?</string>
    <string name="get_started">Get Started</string>
    <string name="getStartedDesc">by creating a free account.</string>
    <string name="full_name">Full Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="strong_password">Strong Password</string>
    <string name="checkbox_createAccount">By checking the box you agree to our Terms and Conditions.</string>
    <string name="already_member">Already Member?</string>
    <string name="log_in">Log In</string>
    <string name="next"><![CDATA[Next >]]></string>
    <string name="remember_me">Remember me</string>
    <string name="new_member">New Member?</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="valid_email_hint">Valid email</string>
    <string name="next_button_text"><![CDATA[Next >]]></string>
    <string name="toggle_fragment">Toggle Fragment</string>
    <string name="password_hint">Password</string>
    <string name="email_hint">Enter your email</string>
    <string name="register_label">Register Now</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="main_activity_placeholder_text">It just works.</string>

    <string-array name="recipes_list">
        <item>Black Karaage with Curry Bento</item>
        <item>Seafood Udon</item>
        <item>Tonkotsu Ramen</item>
        <item>Takoyaki</item>
        <item>Tempura</item>
        <item>Yakitori Shrimp</item>
    </string-array>

    <string-array name="recipes_descriptions_list">
        <item>This Japanese modern izakaya dish features crispy black ka..</item>
        <item>A Japanese-style dish that’s quick and easy to prepare..</item>
        <item>Is a Japanese noodle soup dish that originated in Fukuoka, Fu..</item>
        <item>Is a Japanese snack that originated in Osaka, Japan. It is a ball-shaped cake made fr..</item>
        <item>Is a popular Japanese dish that consists of seafood, vegetable..</item>
        <item>Is a Japanese dish that consists of skewered and grilled chicken. However, it ca..</item>
    </string-array>


</resources>
