<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!--
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="24dp"
        android:contentDescription="Adventure map illustration"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@drawable/welcome_background" />
        -->

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/welcomeLabel"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/WelcomeLabelDesc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.582"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/InputEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:endIconContentDescription="mail icon"
        app:endIconDrawable="@drawable/mail"
        app:endIconMode="custom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintWidth_percent="0.85">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rectangle_text_background"
            android:fontFamily="@font/montserrat"
            android:hint="Enter your email"
            android:inputType="textEmailAddress"
            android:padding="16dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/InputPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:endIconContentDescription="lock icon"
        app:endIconDrawable="@drawable/lock"
        app:endIconMode="custom"
        app:layout_constraintEnd_toEndOf="@+id/InputEmail"
        app:layout_constraintStart_toStartOf="@+id/InputEmail"
        app:layout_constraintTop_toBottomOf="@+id/InputEmail">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rectangle_text_background"
            android:fontFamily="@font/montserrat"
            android:hint="Password"
            android:inputType="textPassword"
            android:padding="16dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <CheckBox
        android:id="@+id/checkbox_remember"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/remember_me"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/InputPassword"
        app:layout_constraintTop_toBottomOf="@+id/InputPassword" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat"
        android:text="@string/forget_password"
        android:textColor="#6C63FF"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/checkbox_remember"
        app:layout_constraintEnd_toEndOf="@+id/InputPassword"
        app:layout_constraintTop_toTopOf="@+id/checkbox_remember" />

    <Button
        android:id="@+id/next_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:backgroundTint="#6C63FF"
        android:fontFamily="@font/montserrat"
        android:padding="16dp"
        android:text="@string/next"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/InputPassword"
        app:layout_constraintStart_toStartOf="@+id/InputPassword"
        app:layout_constraintTop_toBottomOf="@+id/checkbox_remember" />

    <TextView
        android:id="@+id/new_member"
        android:layout_width="wrap_content"
        android:layout_height="16dp"
        android:layout_marginTop="12dp"
        android:fontFamily=""
        android:text="@string/new_member"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@+id/registerNowLabel"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="@+id/next_button"
        app:layout_constraintTop_toBottomOf="@+id/next_button" />

    <TextView
        android:id="@+id/registerNowLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:fontFamily="@font/montserrat"
        android:text="Register Now"
        android:textColor="#6C63FF"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/new_member"
        app:layout_constraintEnd_toEndOf="@+id/next_button"
        app:layout_constraintStart_toEndOf="@+id/new_member"
        app:layout_constraintTop_toTopOf="@+id/new_member" />

</androidx.constraintlayout.widget.ConstraintLayout>